--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <a href="contact.html" class="nav-item nav-link" style="color:#61666a">
+                    <a href="information.html" class="nav-item nav-link" style="color:#61666a">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
                                 <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
@@ -112,7 +112,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <a href="about.html" class="nav-item nav-link" style="color:#61666a">
+                    <a href="nutrition.html" class="nav-item nav-link" style="color:#61666a">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
                                 <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
